crates/python_parser/tests/snapshots/invalid_syntax@expressions__compare__named_expression.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/compare/named_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..31,
        body: [
            Expr(
                ExprStmt {
                    range: 0..10,
                    value: Compare(
                        CompareExpr {
                            range: 0..10,
                            left: Name(
                                NameExpr {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                NotIn,
                            ],
                            comparators: [
                                Name(
                                    NameExpr {
                                        range: 9..10,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 14..20,
                    value: Tuple(
                        TupleExpr {
                            range: 14..20,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 15..16,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 18..19,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 21..26,
                    value: Compare(
                        CompareExpr {
                            range: 21..26,
                            left: Name(
                                NameExpr {
                                    range: 21..22,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                Gt,
                            ],
                            comparators: [
                                Name(
                                    NameExpr {
                                        range: 25..26,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 30..31,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 30..31,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x not in y := (1, 2)
  |            ^^ Syntax Error: Expected a statement
2 | x > y := 2
  |


  |
1 | x not in y := (1, 2)
2 | x > y := 2
  |       ^^ Syntax Error: Expected a statement
  |
